# building-energy-standards-data

./: .gitignore  DISCLAMER.md  LICENSE.md  OSSTD_database.ipynb  README.md  build_opstudio_data.py  create_db_from_csv.py  create_table.py  export_to_csv.py  pyproject.toml  test_code.py
.github/workflows/: openstudio_standards_database.yml  publish.yml  release.yml  trigger_osstd_repo_action.yml
.history/: build_opstudio_data_20240815091211.py  create_table_20240815082343.py  test_20240814143649.py
.history/tests/: test_20240813175545.py  test_20240813175613.py  test_20240813175753.py  (+19 more)
applications/: web_application.py  web_application_helpers.py
building_energy_standards_data/: __init__.py  client.py
database_docs/: README.md  create_json_doc.py  create_md_doc.py  doc_base.json
database_files/: hvac_minimum_requirement_boilers_90_1.json  hvac_minimum_requirement_boilers_IECC.json  hvac_minimum_requirement_chillers_90_1.json  hvac_minimum_requirement_water_heaters_90_1.json  hvac_minimum_requirement_water_heaters_IECC.json
database_tables/: __init__.py  hvac_minimum_requirement_boilers.py  hvac_minimum_requirement_boilers_90_1_prm.py  hvac_minimum_requirement_boilers_IECC.py  hvac_minimum_requirement_chillers.py  hvac_minimum_requirement_chillers_90_1_prm.py  hvac_minimum_requirement_water_heaters.py  hvac_minimum_requirement_water_heaters_90_1_prm.py  hvac_minimum_requirement_water_heaters_IECC.py
docs/: DeveloperNotes.md  QuickStartGuide.md  README.md  Structure.md
osstd_data_update/: build_data.py  run.sh
tests/: test_database.py  test_template.py
(+769 files in other folders)
