[tool.poetry]
name = "building-energy-standards-data"
version = "0.1.1"
description = ""
authors = ["Lerond, Jeremy <jeremy.lerond@pnnl.gov>", "Xu, Weili <weili.xu@pnnl.gov>", "Lei, Xuechen <xuechen.lei@pnnl.gov>", "Wang, Lingzhe <lingzhe.wang@pnnl.gov>", "Dehwah, Ammar <ammar.dehwah@pnnl.gov>", "Slane-Holloway, Julian <julian.slane-holloway@pnnl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
